<resources>
    <string name="app_name">Besser</string>
    <string name="strLogin">Login</string>
    <string name="strRegister">Register</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strName">Name</string>
    <string name="strIncorrectPasswordToast">Incorrect Password: Please, Try Again</string>
    <string name="strLoginNotApproved">Your Login Has Not Yet Been Approved By A Supervisor: Please, Try Again Later</string>
    <string name="strIncorrectAccountRegistration">An Account With That Username Already Exists: Please, Try Another Username</string>
    <string name="strThanksForRegistering">Thanks For Registering: Your Account Will Be Approved Soon</string>
    <string name="strPendingIdeas">Pending Ideas</string>
    <string name="strApprovedIdeas">Approved Ideas</string>
    <string name="strNewIdea">New Idea</string>
    <string name="strMyIdeas">My Ideas</string>
    <string name="strGettingInspired">Getting Inspired</string>
    <string name="strEmployeeIdeaLocationSite">Address of the location</string>
    <string name="strMyIdea">Create Idea</string>
    <string name="strInspired">Inspired</string>
    <string name="strProfile">Profile</string>
    <string name="CreateIdea">Create a New Idea</string>
    <string name="strIdeaFrom">This Idea is From:</string>
    <string name="strMyself">Myself</string>
    <string name="strOther">Other</string>
    <string name="strTitle">Title:</string>
    <string name="strIdeaTitle">Title of the New Idea</string>
    <string name="strReviewerIdeas">Review Ideas</string>
    <string name="strEmployeeIdea">Employee Idea</string>
    <string name="strAuthorizedReviewer">Authorized Reviewer</string>
    <string name="strValuedEmployee">Valued Employee</string>
    <string name="strUserRegister">User Registration</string>
    <string name="strUserLogin">User Login</string>
    <string name="strLocationSite">Location / Site:</string>
    <string name="strProblem">Problem:</string>
    <string name="strProblemDefinition">Description Of The Problem</string>
    <string name="strSolution">Solution:</string>
    <string name="strSolutionDefinition">Description Of The Solution</string>
    <string name="strFeasibility">Feasibility:</string>
    <string name="strAdvantages">Advantages:</string>
    <string name="strMultiplePossible">Multiple Selections Possilbe</string>
    <string name="strAdv1">Reduction of material, time or energy.</string>
    <string name="strAdv2">Qualitative or quantitative improvement.</string>
    <string name="strAdv3">Increase in occupational safety, health protection, environmental protection, sustainability, effectiveness of social facilities.</string>
    <string name="strAdv4">Contribution to Public Relations and advertising.</string>
    <string name="strSolutionTried">Solution already tried?:</string>
    <string name="strTried1">Yes</string>
    <string name="strTried2">No</string>
    <string name="strSolutionDesc">Give some details of the implemented solution: </string>
    <string name="strSolutionDefinitionDesc">Description of Solution Implemented</string>
    <string name="strSelectionOfPremium">Selection of the premium in kind:</string>
    <string name="strPremium1">Power Bank</string>
    <string name="strPremium2">Umbrella</string>
    <string name="strPremium3">Running Shirt</string>
    <string-array name="arFeasibility">
        <item>Very easy</item>
        <item>Easy</item>
        <item>Neither Nor</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>
    <string name="strConfirm">Confirm</string>
    <string name="strCancel">Cancel</string>
    <string name="strComments">Add or View Comments</string>
    <string name="strApproveIdeas">Approve Idea</string>
    <string name="strSelectAuthor">Error: You must check idea author ( Myself or Other)</string>
    <string name="strSelectIdeaTitle">Error: You must enter idea title.</string>
    <string name="strSelectLocationSite">Error: You must give a location site.</string>
    <string name="strSelectProblem">Error: You must state a problem being solved.</string>
    <string name="strSelectSolution">Error: You must give a solution to the problem.</string>
    <string name="strSelectFeasibility">Error: You must state how feasible the solution is.</string>
    <string name="strSelectAdvantage">Error: You must state at least 1 solution advantage.</string>
    <string name="strSelectTriedSolution">Error: You must state wether the solution has been attempted.</string>
    <string name="strSelectSolutionDesc">Error: You must give a previous solution description.</string>
    <string name="strSelectPremium">Error: You must select a premium.</string>
    <string name="strAddAdminUsers">Add Admin Users</string>
    <string name="strAddAdminUser">Add Admin User</string>
    <string name="strAdmin">Admin</string>
    <string name="strReviewPrivacyConditional">"You Must Approve / Review Privacy Terms. "</string>
    <string name="strTermsAndConditions">Terms And Conditions</string>
    <string name="strTermsList">This Is The Terms And Conditions.</string>
    <string name="strMustEnterName">Error: Must Enter Valid Name.</string>
    <string name="strMustEnterUsername">Error: Must Enter Valid Username.</string>
    <string name="strMustEnterPassword">Error: Must Enter Valid Password.</string>
    <string name="strAnonymousIdea">Anonymous Idea</string>
    <string name="strAnonymousIdeaSubmit">Submit Idea Anonymously</string>
    <string name="strOr">Or</string>
    <string name="strCurrentIdeas">View Ideas</string>
    <string name="IdeaReview">"Idea Review "</string>
    <string name="strNoIdeasFound">No Ideas Found: Empty List</string>
    <string name="strEmployeeIdeaList">Employee Ideas</string>
    <string name="strEmployeeIdeaReview">Employee Idea Review</string>
    <string name="strNoUsersFound">No Users Found: Empty List</string>
    <string name="strEmployee">Employee</string>
    <string name="strReviewer">Reviewer</string>
    <string name="strTrue">True</string>
    <string name="strFalse">False</string>
    <string name="strViewUsers">View Users / Change Permissions</string>
    <string name="strUserList">List Of Users</string>
    <string name="strEditUser">Edit User</string>
    <string name="strApproveUser">Approved User</string>
    <string name="strUserApproved">Is This User Approved?</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strDeleteUser">Delete User</string>
    <string name="strCancelChanges">Cancel Changes</string>
    <string name="strSubmitChanges">Submit Changes</string>
    <string name="strAccountType">Account Type:</string>
    <string name="strUserName">Name Of User:</string>
    <string name="strApprovedUser">Error: User Must Either Be Approved Or Not Approved.</string>
    <string name="strNameValid">Error: User Must Have Valid Name.</string>
    <string name="strAddUser">Add User</string>
    <string name="strUsernameForUser">Username Of User:</string>
    <string name="strPasswordForUser">Password Of User:</string>
    <string name="strSubmit">Submit</string>
    <string name="strMustEnterAccountType">Error: Must Enter Account Type.</string>
    <string name="strAccountSucessfullyCreated">Account Had Been Created Successfully.</string>
    <string name="strIDNo">ID No.: </string>
    <string name="strAuthor">Author: </string>
    <string name="strDescription">Description: </string>
    <string name="strComment">Comment:</string>
    <string name="strApproveStatus">Approve Status:</string>
    <string name="strNameColon">Name:</string>
    <string name="strUsernameColon">Username:</string>
    <string name="strPasswordUser">Password of User:</string>
    <string name="strEditProfile">Edit Profile</string>
    <string name="strPasswordValid">Error: Must Have Valid Password.</string>
    <string name="strAddUsers">Add Users</string>
    <string name="FirebaseDB">FirebaseDB</string>
    <string name="FirebaseDBDescription">Notification Channel for FirebaseDB</string>
    <string name="NewIdea">A new idea has been posted</string>
    <string name="NewIdeaMessage">%d ideas have been posted</string>
    <string-array name="arAccountType">
        <item>Employee</item>
        <item>Reviewer</item>
        <item>Admin</item>
    </string-array>
</resources>