<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAdminUser">

    <TextView
        android:id="@+id/txtCreateIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/rectangle_box_design"
        android:text="@string/strAddUser"
        android:textColor="@color/buttonText"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateIdea"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="200">
            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strUsernameForUser"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/strUsernameForUser"
                android:inputType="none" />
            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strPasswordForUser"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/strPasswordForUser"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strUserName"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/strUserName"
                android:inputType="none" />
            <TextView
                android:id="@+id/txtAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strAccountType"
                android:textSize="20sp" />
            <Spinner
                android:id="@+id/spinnerAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="2.5sp"/>
            <Button
                android:id="@+id/btnSubmitChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/strSubmit"
                android:textColor="@color/buttonText" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="2.5sp"/>
            <Button
                android:id="@+id/btnCancelChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/strCancel"
                android:textColor="@color/buttonText" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txtCreateIdea"
        app:layout_constraintEnd_toEndOf="@+id/txtCreateIdea"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/txtCreateIdea"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/besser" />
</androidx.constraintlayout.widget.ConstraintLayout>