<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCommentUsernameStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAuthor" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtCommentUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCommentIDStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strIDNo" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtCommentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCommentCommentStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strComment" />

    <TextView
        android:id="@+id/txtCommentComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="5" />


</LinearLayout>