<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Employee">

    <Button
        android:id="@+id/btnMyIdea"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:background="@drawable/button_shape"
        android:text="@string/strMyIdea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnInspired"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="@string/strInspired"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyIdea" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="257dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_shape"
        android:text="@string/strProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInspired" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="@+id/btnMyIdea"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/btnMyIdea"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/besser" />
</androidx.constraintlayout.widget.ConstraintLayout>